# cadence

./: .env.example  .gitignore  .keepalive  ACTIONS_FOR_PAUL.md  Automated Intern Recruitment Workflow.md  CLAUDE.md  Makefile  README.md  assignment.md  companies.example.yaml  companies.yaml  master_resume.example.yaml  networking_targets.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily.yml  keepalive.yml
data/: .gitkeep
src/internship_pipeline/: __init__.py  alerts.py  config.py  logging_config.py  models.py  run_daily.py  triggers.py
src/internship_pipeline/digest/: __init__.py  email.py  render.py
src/internship_pipeline/digest/templates/: digest.html.j2
src/internship_pipeline/fixtures/: dry_run_jobs.json  dry_run_resume.yaml
src/internship_pipeline/networking/: __init__.py  copy.py  models.py  rows.py  sequence.py  sheet.py  targets.py
src/internship_pipeline/outreach/: __init__.py  approve_and_send.py  contacts.py  copy.py  drafts.py  footer.py  gmail.py  gmail_auth.py  replies.py  suppress.py
src/internship_pipeline/resume/: __init__.py  answers.py  embeddings.py  grouping.py  latex.py  llm.py  loader.py  matching.py  models.py  render.py  rendercv.py  tailoring.py
src/internship_pipeline/review/: __init__.py  __main__.py  app.py  selection.py
src/internship_pipeline/sourcing/: __init__.py  ats.py  companies.py  github_readme.py  html_text.py  http.py  jsearch.py  landedhq.py  questions.py  simplify.py  util.py
src/internship_pipeline/stages/: README.md  __init__.py  draft_outreach.py  log_and_digest.py  match_and_slice.py  networking.py  prepare_applications.py  source.py  sync_tracker.py
src/internship_pipeline/storage/: __init__.py  base.py  sqlite_store.py  supabase_store.py
src/internship_pipeline/storage/sql/: postgres.sql  sqlite.sql
src/internship_pipeline/tracker/: __init__.py  auth.py  backfill.py  drive.py  rows.py  sheets.py  sync.py
tests/: conftest.py  test_alerts.py  test_answers.py  test_application_expiry.py  test_applications_storage.py  test_ats.py  test_companies.py  test_config.py  test_cv_grouping.py  test_digest.py  test_digest_phase4.py  test_dry_run.py  test_github_readme.py  test_gmail_drafts.py  test_html_text.py  test_jsearch.py  test_landedhq.py  test_latex.py  test_llm_parsing.py  test_llm_temperature.py  test_logging_config.py  test_models.py  test_networking_copy.py  test_networking_rows.py  test_networking_sequence.py  test_networking_stage.py  test_networking_targets.py  test_outreach_contacts.py  test_outreach_copy.py  test_outreach_footer.py  test_outreach_send.py  test_outreach_stage.py  test_prepare_applications.py  test_questions.py  test_replies.py  test_resume_links.py  test_resume_loader.py  test_resume_matching.py  test_resume_stage.py  test_resume_tailoring.py  (+12 more)
tests/fixtures/: ashby_sample.json  canadian_readme_sample.md  greenhouse_job_questions.json  greenhouse_sample.json  jsearch_sample.json  lever_sample.json  listings_sample.json  master_resume_sample.yaml
