[project]
name = "internship-pipeline"
version = "0.0.0"
description = "Scheduled, logged, human-in-the-loop internship-hunting pipeline (see 'Automated Intern Recruitment Workflow.md')."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "tenacity>=8.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]
# Phase 2 heavy/optional deps. All are lazy-imported: the pipeline (and the test
# suite) runs without them — embeddings fall back to a deterministic hashing
# embedder, tailoring/answers to deterministic select-only, and PDF render is
# skipped (YAML/.tex still written). Install the ones you want.
# PDF compilation needs a LaTeX engine on PATH (tectonic recommended — `brew
# install tectonic`; see ACTIONS_FOR_PAUL.md); pypdf reads the page count for
# the one-page fit trim.
ml = ["sentence-transformers>=2.2"]       # local embeddings (default backend)
llm = ["anthropic>=0.40"]                 # Claude Haiku tailoring/answers
render = ["pypdf>=4.0"]                   # page-count for the one-page LaTeX fit
phase2 = ["sentence-transformers>=2.2", "anthropic>=0.40", "pypdf>=4.0"]
# Phase 3 outreach. Contact lookup (Hunter/Apollo) needs no extra deps — it reuses the
# core httpx client. Only the manual Gmail SEND path needs Google's libraries, and they
# are lazy-imported: drafting (and the whole daily run) works without them.
gmail = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]
phase3 = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]
# Phase 5 tracker: Google Sheets application workspace + Drive CV store. Same
# libraries as gmail plus google-auth for service-account credentials; lazy-imported,
# so the sync stage no-ops without them (zero-credential rule).
tracker = ["google-api-python-client>=2.0", "google-auth>=2.0"]
phase5 = ["google-api-python-client>=2.0", "google-auth>=2.0", "google-auth-oauthlib>=1.0"]

[project.scripts]
internship-pipeline = "internship_pipeline.run_daily:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internship_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
